apps/envoy-gateway/mtls-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mtls-public
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: 192.168.49.2
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "helloworld.example.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: domain-certs
          namespace: envoy-gateway
