apps/envoy-gateway/tls-redirect.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: envoy-gateway
spec:
  parentRefs:
    - name: public
      sectionName: http
  # hostnames:
  #   - "*.example.io"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
